--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <h1>Git & GitHub Crash Course</h1>
     <p>Because the basics are important!</p>
+    <p>Because the basics should be clear!</p>
+    <p>Because the basics are required!</p>
   </body>
 </html>
