--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Git & GitHub Crash Course !!!!</title>
   </head>
   <body>
+    <section>
     <h1>Git & GitHub Crash Course !!</h1>
     <p>Because the basics are important!</p>
-    <p>Because the basics should be clear!</p>
-    <p>Because the basics are required!</p>
+  </section>
   </body>
 </html>
